Bug 260836 - [usability] can not delete add-on when update is available
Summary: [usability] can not delete add-on when update is available
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knewstuff (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 418041 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-20 23:04 UTC by Alexander Potashev
Modified: 2020-07-23 17:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-12-20 23:04:51 UTC
Version:           SVN (using KDE 4.5.85) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
1. install something from KHotNewStuff (for example, a script for Amarok)
2. wait for the script to update at kde-apps

Actual Results:  
Now there is only the button "Update", no "Delete"/"Remove" button.

Expected Results:  
Two buttons (to be able to either update or delete the script).
Comment 1 rockonthemoonfm 2012-08-15 08:51:30 UTC
this bug is solved now in kde 4.9 and amarok 2.5, should be CLOSED
Comment 2 Andrew Crouthamel 2018-11-09 01:09:18 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Andrew Crouthamel 2018-11-20 03:58:07 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Alexander Lohnau 2020-07-19 19:03:50 UTC
In the details view of the QWidgets dialog is button for removal, but not in the normal view.
Also the QtQuick dialog has this issue.
Comment 5 Alexander Lohnau 2020-07-19 19:05:39 UTC
*** Bug 418041 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2020-07-22 18:34:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/17
Comment 7 Bug Janitor Service 2020-07-22 18:34:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/17
Comment 8 Alexander Lohnau 2020-07-23 17:26:50 UTC
Git commit 139981be02da82bbd4016e9933e57395f490ad78 by Alexander Lohnau.
Committed on 23/07/2020 at 17:17.
Pushed by ngraham into branch 'master'.

Allow to delete updatable entries

Also while at it add an icon for the use action in the QWidgets dialog:

M  +1    -1    src/qtquick/qml/EntryDetails.qml
M  +1    -1    src/qtquick/qml/NewStuffItem.qml
M  +1    -1    src/qtquick/qml/private/entrygriddelegates/BigPreviewDelegate.qml
M  +1    -1    src/qtquick/qml/private/entrygriddelegates/ThumbDelegate.qml
M  +1    -1    src/qtquick/qml/private/entrygriddelegates/TileDelegate.qml
M  +18   -2    src/ui/itemsviewdelegate.cpp

https://invent.kde.org/frameworks/knewstuff/commit/139981be02da82bbd4016e9933e57395f490ad78
Comment 9 Alexander Lohnau 2020-07-23 17:26:50 UTC
Git commit 139981be02da82bbd4016e9933e57395f490ad78 by Alexander Lohnau.
Committed on 23/07/2020 at 17:17.
Pushed by ngraham into branch 'master'.

Allow to delete updatable entries

Also while at it add an icon for the use action in the QWidgets dialog:

M  +1    -1    src/qtquick/qml/EntryDetails.qml
M  +1    -1    src/qtquick/qml/NewStuffItem.qml
M  +1    -1    src/qtquick/qml/private/entrygriddelegates/BigPreviewDelegate.qml
M  +1    -1    src/qtquick/qml/private/entrygriddelegates/ThumbDelegate.qml
M  +1    -1    src/qtquick/qml/private/entrygriddelegates/TileDelegate.qml
M  +18   -2    src/ui/itemsviewdelegate.cpp

https://invent.kde.org/frameworks/knewstuff/commit/139981be02da82bbd4016e9933e57395f490ad78