Allow to delete updatable entries

BUG: 260836

Also while at it add an icon for the use action in the QWidgets dialog:
BUG: 260836