src/qtquick/qml/private/entrygriddelegates/ThumbDelegate.qml
@@ -79,7 +79,7 @@ KCM.GridDelegate {
             text: component.uninstallLabel
             iconName: "uninstall"
             onTriggered: { newStuffModel.uninstallItem(model.index); }
-            enabled: model.status == NewStuff.ItemsModel.InstalledStatus
+            enabled: model.status == NewStuff.ItemsModel.InstalledStatus || model.status == NewStuff.ItemsModel.UpdateableStatus
             visible: enabled;
         }
     ]
