src/qtquick/qml/private/entrygriddelegates/TileDelegate.qml
@@ -87,7 +87,7 @@ Private.GridTileDelegate {
             text: component.uninstallLabel
             iconName: "uninstall"
             onTriggered: { newStuffModel.uninstallItem(model.index); }
-            enabled: model.status == NewStuff.ItemsModel.InstalledStatus
+            enabled: model.status == NewStuff.ItemsModel.InstalledStatus || model.status == NewStuff.ItemsModel.UpdateableStatus
             visible: enabled && hovered;
         },
         Kirigami.Action {
